# SDL_cpp

./: .clang-format  .gitignore  .ignore  ;  CMakeLists.txt  Makefile  README.md  build.sh
Include/Headers/: Utils.hh
Include/Utils/: Utils.hh
Source/Entities/: Camera.cc  Camera.hh  EntityUtils.hh  Player.cc  Player.hh
Source/Main/: Camera.cc  Camera.hh  Config.cc  Config.hh  Engine.cc  Engine.hh  Level.cc  Level.hh  main.cc
Source/Utils/: Utils.hh  utils.cc
doc/: config.md  exampleconfig.ini  exampleconfig.toml
include/assetHandeling/: Font.hh
include/assetHandling/: Font.hh
include/assetHandling/UI/: UI_Button.hh
include/entities/: Camera.hh  Entity.hh  NPC.hh  Player.hh
include/game/entities/: Attack.hh  Camera.hh  Entity.hh  EntityAttributes.hh  ItemEntity.hh  NPC.hh  Player.hh
include/game/entities/Attack/: Attack.hh  AttackFactory.hh  Attacks.hh
include/game/entities/Attack/Weapons/: Melee.hh  Ranged.hh
include/game/entities/Creature/: Creature.hh  CreatureFactory.hh
include/game/entities/Creature/Components/: Component.hh
include/game/entities/Creature/Enemies/: Thief.hh
include/game/entities/Creature/Neutral/: Human.hh
include/game/items/: Inventory.hh  Item.hh  ItemFactory.hh
include/game/items/Weapons/: Melee.hh  Ranged.hh
include/main/: Action.hh  Config.hh  Engine.hh  Level.hh
lib/utils/: debug_utils.hh  engine_utils.hh  error_handeling.hh  error_handling.hh  error_utils.hh  math_utils.hh  sdl_utils.hh  utils.hh
src/assetHandeling/: Font.cc
src/assetHandling/: Font.cc
src/assetHandling/UI/: UI_Button.cc
src/entities/: Camera.cc  Entity.cc  NPC.cc  Player.cc
src/game/entities/: Attack.cc  Camera.cc  Entity.cc  EntityAttributes.cc  ItemEntity.cc  NPC.cc  Player.cc
src/game/entities/Attack/: Attack.cc  AttackFactory.cc
src/game/entities/Creature/: Creature.cc  CreatureFactory.cc
src/game/entities/Creature/Components/: Component.cc
src/game/entities/Creature/Enemies/: Thief.cc
src/game/entities/Creature/Neutral/: Human.cc
src/game/items/: Inventory.cc  Item.cc  ItemFactory.cc
src/main/: Action.cc  Config.cc  Engine.cc  Level.cc  main.cc
